--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -2,6 +2,10 @@
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header> {{ post.title }}</mat-expansion-panel-header>
     <p>{{ post.content }}</p>
+    <mat-action-row>
+      <button color="primary" mat-button>Edit</button>
+      <button color="warn" mat-button>Delete</button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p class="mat-body-1 info-text" *ngIf="posts.length <= 0">No posts</p>
