--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -4,7 +4,7 @@
     <p>{{ post.content }}</p>
     <mat-action-row>
       <button color="primary" mat-button>Edit</button>
-      <button color="warn" mat-button>Delete</button>
+      <button color="warn" (click)="onDelete(post.id)" mat-button>Delete</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
