--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,11 +1,16 @@
-<mat-accordion multi="true" *ngIf="posts.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header> {{ post.title }}</mat-expansion-panel-header>
     <p>{{ post.content }}</p>
     <mat-action-row>
-      <button color="primary" mat-button>Edit</button>
-      <button color="warn" (click)="onDelete(post.id)" mat-button>Delete</button>
+      <a color="primary" [routerLink]="['/edit', post.id]" mat-button>Edit</a>
+      <button color="warn" (click)="onDelete(post.id)" mat-button>
+        Delete
+      </button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class="mat-body-1 info-text" *ngIf="posts.length <= 0">No posts</p>
+<p class="mat-body-1 info-text" *ngIf="posts.length <= 0 && !isLoading">
+  No posts
+</p>
