--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -5,3 +5,13 @@ textarea {
 mat-spinner {
   margin: auto;
 }
+input[type="file"] {
+  visibility: hidden;
+}
+.imagePreview {
+  height: 5rem;
+  margin: 1rem 0;
+}
+.imagePreview img {
+  height: 100%;
+}
