--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -8,3 +8,12 @@
 mat-spinner {
   margin: auto;
 }
+.postImage {
+  width: 100%;
+  height: 30rem;
+}
+.postImage img {
+  width: 100%;
+  height: 100%;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
