--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -3,7 +3,7 @@
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header> {{ post.title }}</mat-expansion-panel-header>
     <div class="postImage">
-      <img [src]="post.imagePath" [alt]="post.title">
+      <img [src]="post.imagePath" [alt]="post.title" />
     </div>
     <p>{{ post.content }}</p>
     <mat-action-row>
@@ -14,6 +14,13 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
+<mat-paginator
+  *ngIf="posts.length > 0"
+  [length]="totalPosts"
+  [pageSize]="postsPerPage"
+  [pageSizeOptions]="pageSizeOptions"
+  (page)="onChangedPage($event)"
+></mat-paginator>
 <p class="mat-body-1 info-text" *ngIf="posts.length <= 0 && !isLoading">
   No posts
 </p>
