--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,18 +2,21 @@
   <span><a routerLink="/">Post</a></span>
   <span class="spacer"></span>
   <ul>
-    <li>
+    <li *ngIf="userIsAuthenticated">
       <a mat-button routerLink="/create" routerLinkActive="mat-accent"
         >New Post</a
       >
     </li>
-    <li>
+    <li *ngIf="!userIsAuthenticated">
       <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
     </li>
-    <li>
+    <li *ngIf="!userIsAuthenticated">
       <a mat-button routerLink="/signup" routerLinkActive="mat-accent"
         >Sign up</a
       >
+    </li>
+    <li *ngIf="userIsAuthenticated">
+      <button mat-button (click)="onLogout()">Log out</button>
     </li>
   </ul>
 </mat-toolbar>
